--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "version": 2,
     "builds": [
       { "src": "app.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      { "src": "/(.*)", "dest": "app.py" }
     ]
   }
